@@ -103,9 +103,6 @@ cd ${INPUTDIR}
 cp ${FROM_MGIINFILE_NAME_GZ} ${INPUTDIR}
 rm -rf ${MGIINFILE_NAME_GPAD}
 gunzip ${MGIINFILE_NAME_GZ}
-cp ${FROM_PRINFILE_NAME_GZ} ${INPUTDIR}
-rm -rf ${PRINFILE_NAME_GPAD}
-gunzip ${PRINFILE_NAME_GZ}
 
 #
 # pre-process
